--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -13,7 +13,7 @@
         {% for item in player.items if item.quantity > 0 %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}">{{ item.artifact.name }}</a> [{{ item.quantity|nf }}]</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}" class="link">{{ item.artifact.name }}</a> [{{ item.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
