--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -11,8 +11,8 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-bank"></i>Reino</div>
+            <div class="panel panel-default text-responsive">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-bank"></i>Reino</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -24,14 +24,14 @@
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Recaudar oro</span></a>
-                    <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-secret"></i><span class="hidden-xs">Mercado negro</span></a>
+                    <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-default"><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Recaudar oro</span></a>
+                    <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-user-secret"></i><span class="hidden-xs">Mercado negro</span></a>
                 </div>
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i>Territorio</div>
+            <div class="panel panel-default text-responsive">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-globe"></i>Territorio</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -43,15 +43,15 @@
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_territory_explore') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-search"></i><span class="hidden-xs">Explorar</span></a>
-                    <a href="{{ path('archmage_game_territory_build') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-wrench"></i><span class="hidden-xs">Construir</span></a>
-                    <a href="{{ path('archmage_game_territory_demolish') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-bomb"></i><span class="hidden-xs">Derribar</span></a>
+                    <a href="{{ path('archmage_game_territory_explore') }}" class="btn btn-default"><i class="fa fa-fw fa-search"></i><span class="hidden-xs">Explorar</span></a>
+                    <a href="{{ path('archmage_game_territory_build') }}" class="btn btn-default"><i class="fa fa-fw fa-wrench"></i><span class="hidden-xs">Construir</span></a>
+                    <a href="{{ path('archmage_game_territory_demolish') }}" class="btn btn-default"><i class="fa fa-fw fa-bomb"></i><span class="hidden-xs">Derribar</span></a>
                 </div>
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flask"></i>Magia</div>
+            <div class="panel panel-default text-responsive">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i>Magia</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -63,15 +63,15 @@
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_magic_charge') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-tint"></i><span class="hidden-xs">Cargar maná</span></a>
-                    <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs">Conjurar</span></a>
-                    <a href="{{ path('archmage_game_magic_research') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-graduation-cap"></i><span class="hidden-xs">Investigar</span></a>
+                    <a href="{{ path('archmage_game_magic_charge') }}" class="btn btn-default"><i class="fa fa-fw fa-tint"></i><span class="hidden-xs">Cargar maná</span></a>
+                    <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-magic"></i><span class="hidden-xs">Conjurar</span></a>
+                    <a href="{{ path('archmage_game_magic_research') }}" class="btn btn-default"><i class="fa fa-fw fa-graduation-cap"></i><span class="hidden-xs">Investigar</span></a>
                 </div>
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag-checkered"></i>Ejército</div>
+            <div class="panel panel-default text-responsive">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-flag-checkered"></i>Ejército</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -83,15 +83,15 @@
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_army_recruit') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-plus"></i><span class="hidden-xs">Reclutar</span></a>
-                    <a href="{{ path('archmage_game_army_disband') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-times"></i><span class="hidden-xs">Licenciar</span></a>
-                    <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-flag"></i><span class="hidden-xs">Atacar</span></a>
+                    <a href="{{ path('archmage_game_army_recruit') }}" class="btn btn-default"><i class="fa fa-fw fa-user-plus"></i><span class="hidden-xs">Reclutar</span></a>
+                    <a href="{{ path('archmage_game_army_disband') }}" class="btn btn-default"><i class="fa fa-fw fa-user-times"></i><span class="hidden-xs">Licenciar</span></a>
+                    <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-flag"></i><span class="hidden-xs">Atacar</span></a>
                 </div>
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-shield"></i>Defensa</div>
+            <div class="panel panel-default text-responsive">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-shield"></i>Defensa</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -99,23 +99,23 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-12">
-                                <i class="fa fa-fw fa-lg fa-magic"></i><a href="{{ path('archmage_game_home_help') }}">Hechizo de defensa</a>
+                                <i class="fa fa-fw fa-magic"></i><a href="{{ path('archmage_game_home_help') }}">Hechizo de defensa</a>
                             </div>
                             <div class="col-xs-12">
-                                <i class="fa fa-fw fa-lg fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}">Artefacto de defensa</a>
+                                <i class="fa fa-fw fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}">Artefacto de defensa</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs">Hechizos</span></a>
-                    <a href="{{ path('archmage_game_magic_artifact') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-joomla"></i><span class="hidden-xs">Artefactos</span></a>
+                    <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-magic"></i><span class="hidden-xs">Hechizos</span></a>
+                    <a href="{{ path('archmage_game_magic_artifact') }}" class="btn btn-default"><i class="fa fa-fw fa-joomla"></i><span class="hidden-xs">Artefactos</span></a>
                 </div>
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i>Cuenta</div>
+            <div class="panel panel-default text-responsive">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i>Cuenta</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-4">
@@ -127,8 +127,8 @@
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-envelope"></i><span class="hidden-xs">Mensajes</span></a>
-                    <a href="{{ path('archmage_game_account_profile') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-line-chart"></i><span class="hidden-xs">Ranking</span></a>
+                    <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-envelope"></i><span class="hidden-xs">Mensajes</span></a>
+                    <a href="{{ path('archmage_game_account_profile') }}" class="btn btn-default"><i class="fa fa-fw fa-line-chart"></i><span class="hidden-xs">Ranking</span></a>
                 </div>
             </div>
         </div>
