--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -36,7 +36,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i>Reclutar</button>
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Reclutar</span></button>
                                 </div>
                                 <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="" value="0" required />
                                 <input type="hidden" id="troop" name="troop" value="{{ troop.id }}" required />
