--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -11,9 +11,9 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default text-responsive">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-bank"></i>Reino</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
@@ -30,9 +30,9 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default text-responsive">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-globe"></i>Territorio</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
@@ -50,9 +50,9 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default text-responsive">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i>Magia</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
@@ -70,9 +70,9 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default text-responsive">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-flag-checkered"></i>Ejército</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
@@ -90,9 +90,9 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default text-responsive">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-shield"></i>Defensa</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/defense.jpg') }}">
@@ -114,9 +114,9 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default text-responsive">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i>Cuenta</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/social.jpg') }}">
