--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -11,10 +11,10 @@
             </div>
             <form id="attack" name="attack" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_attack') }}" method="post" role="form">
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-xs-12 col-md-6">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i>Tropas</div>
-                            <div class="panel-body">
+                            <div class="panel-body text-responsive">
                                 {% for troop in player.troops %}
                                 <div class="row">
                                     <div class="col-xs-6 text-right">
@@ -36,8 +36,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-6">
-                        <div class="panel panel-default text-responsive">
+                    <div class="col-xs-12 col-md-6">
+                        <div class="panel panel-default">
                             <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-magic"></i>Hechizo</div>
                             <div class="panel-body text-center">
                                 <div class="form-group">
@@ -55,7 +55,7 @@
                                 Puedes escoger un <a href="{{ path( 'archmage_game_home_help' ) }}#hechizos" class="link">hechizo</a> para conjurar en la batalla.
                             </div>
                         </div>
-                        <div class="panel panel-default text-responsive">
+                        <div class="panel panel-default">
                             <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-joomla"></i>Artefacto</div>
                             <div class="panel-body text-center">
                                 <div class="form-group">
@@ -73,7 +73,7 @@
                                 Puedes escoger un <a href="{{ path( 'archmage_game_home_help' ) }}#artefactos" class="link">artefacto</a> para activar en la batalla.
                             </div>
                         </div>
-                        <div class="panel panel-default text-responsive">
+                        <div class="panel panel-default">
                             <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag"></i>Tipo</div>
                             <div class="panel-body text-center">
                                 <div class="form-group">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="col-xs-12">
-                        <div class="panel panel-default text-responsive">
+                        <div class="panel panel-default">
                             <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i>Objetivo</div>
                             <div class="panel-body text-center">
                                 <div class="form-group">
