--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -5,32 +5,46 @@
 {% block body %}
 <div class="container">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12"><a name="top"></a>
             <div class="page-header text-center">
-                <a name="top"></a>
                 <h1><i class="fa fa-fw fa-info-circle"></i>Ayuda</h1>
             </div>
         </div>
         <div class="col-xs-12"><a name="objetivo"></a>
-            <div class="panel panel-default text-responsive">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Objetivo</div>
-                <div class="panel-body text-responsive">
-                    <p>blabla</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12"><a name="batalla"></a>
-            <div class="panel panel-default text-responsive">
-                <div class="panel-heading text-center">Batalla</div>
                 <div class="panel-body">
                     <p>blabla</p>
                 </div>
             </div>
         </div>
+        <div class="col-xs-12"><a name="batalla"></a>
+            <div class="panel panel-default">
+                <div class="panel-heading text-center">Batalla</div>
+                <div class="panel-body text-center">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-offset-1 col-md-5">
+                            <img class="factions" src="{{ asset('bundles/archmagegame/images/factions.png') }}">
+                            <div class="caption">
+                                <h3>Bonus de facción</h3>
+                                <small>Cada facción tiene una opuesta y aumentará su daño en combate un 25% contra ella. Así, si un <span class="label label-danger">Caos</span> atacase a un <span class="label label-primary">Sagrado</span> u <span class="label label-warning">Oscuridad</span>, su bonus sería del 0%; si atacase a un <span class="label label-success">Naturaleza</span> o <span class="label label-default">Neutral</span>, del +25%; y si atacase a un <span class="label label-info">Fantasmal</span>, -25%.</small>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-5">
+                            <img class="factions" src="{{ asset('bundles/archmagegame/images/units.png') }}">
+                            <div class="caption">
+                                <h3>Bonus de unidad</h3>
+                                <small>Cada unidad tiene un tipo opuesto y aumentará su daño en combate un 25% contra ella. Así, si una <span class="label label-default">Distancia</span> ataca a una <span class="label label-default">Voladora</span>, tendrá un bonus del 25% adicional, pero si ataca a cualquier otra, no tendrá bonificación.</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="col-xs-12"><a name="subasta"></a>
-            <div class="panel panel-default text-responsive">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Subasta</div>
-                <div class="panel-body text-responsive">
+                <div class="panel-body">
                     <p>blabla</p>
                 </div>
             </div>
@@ -43,9 +57,9 @@
         </div>
         {% for faction in factions %}
         <div class="col-xs-12 col-md-6"><a name="{{ faction.name|slug }}"></a>
-            <div class="panel panel-{{ faction.class }} text-responsive">
+            <div class="panel panel-{{ faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-rebel"></i>{{ faction.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset(faction.image) }}">
@@ -69,9 +83,9 @@
         </div>
         {% for building in buildings %}
         <div class="col-xs-12 col-md-6"><a name="{{ building.name|slug }}"></a>
-            <div class="panel panel-default text-responsive">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-home"></i>{{ building.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( building.image ) }}">
@@ -106,9 +120,9 @@
         </div>
         {% for unit in units %}
         <div class="col-xs-12 col-md-6"><a name="{{ unit.name|slug }}"></a>
-            <div class="panel panel-{{ unit.faction.class }} text-responsive">
+            <div class="panel panel-{{ unit.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i>{{ unit.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( unit.image ) }}">
@@ -139,9 +153,9 @@
         </div>
         {% for hero in heroes %}
         <div class="col-xs-12 col-md-6"><a name="{{ hero.name|slug }}"></a>
-            <div class="panel panel-{{ hero.faction.class }} text-responsive">
+            <div class="panel panel-{{ hero.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i>{{ hero.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( hero.image ) }}">
@@ -167,9 +181,9 @@
         </div>
         {% for spell in spells %}
         <div class="col-xs-12 col-md-6"><a name="{{ spell.name|slug }}"></a>
-            <div class="panel panel-{{ spell.faction.class }} text-responsive">
+            <div class="panel panel-{{ spell.faction.class }}">
                 <div class="panel-heading text-center">{% if spell.enchant %}<i class="fa fa-fw fa-lg fa-link"></i>{% else %}<i class="fa fa-fw fa-lg fa-magic"></i>{% endif %}{{ spell.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( spell.image ) }}">
@@ -196,9 +210,9 @@
         </div>
         {% for artifact in artifacts %}
         <div class="col-xs-12 col-md-6"><a name="{{ artifact.name|slug }}"></a>
-            <div class="panel panel-{{ artifact.faction.class }} text-responsive">
+            <div class="panel panel-{{ artifact.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-joomla"></i>{{ artifact.name }}</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( artifact.image ) }}">
@@ -209,7 +223,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    Se obtiene en la subasta, explorando o con Encontrar artefacto.
+                    Se obtiene en la subasta.
                 </div>
             </div>
         </div>
