--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -7,15 +7,15 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-user-secret"></i>Mercado negro<br><</small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }} <i class="fa fa-fw fa-money"></i>{{ player.gold|nf }}</small></h1>
+                <h1><i class="fa fa-fw fa-user-secret"></i>Mercado negro<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }} <i class="fa fa-fw fa-money"></i>{{ player.gold|nf }}</small></h1>
             </div>
         </div>
         {% for auction in auctions %}
         <div class="col-xs-12 col-md-6">
             {% if auction.contract is not null %}
-            <div class="panel panel-{{ auction.contract.hero.faction.class }} text-responsive">
+            <div class="panel panel-{{ auction.contract.hero.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.contract.hero.name|slug }}" class="link">{{ auction.contract.hero.name }}</a> [1]</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( auction.contract.hero.image ) }}" />
@@ -29,9 +29,9 @@
                     </div>
                 </div>
             {% elseif auction.research is not null %}
-            <div class="panel panel-{{ auction.research.spell.faction.class }} text-responsive">
+            <div class="panel panel-{{ auction.research.spell.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-magic"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.research.spell.name|slug }}" class="link">{{ auction.research.spell.name }}</a></div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( auction.research.spell.image ) }}" />
@@ -46,9 +46,9 @@
                     </div>
                 </div>
             {% elseif auction.troop is not null %}
-            <div class="panel panel-{{ auction.troop.unit.faction.class }} text-responsive">
+            <div class="panel panel-{{ auction.troop.unit.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-users"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.troop.unit.name|slug }}" class="link">{{ auction.troop.unit.name }}</a> [{{ auction.troop.quantity|nf }}]</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( auction.troop.unit.image ) }}" />
@@ -67,9 +67,9 @@
                     </div>
                 </div>
             {% elseif auction.item is not null %}
-            <div class="panel panel-{{ auction.item.artifact.faction.class }} text-responsive">
+            <div class="panel panel-{{ auction.item.artifact.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}#{{ auction.item.artifact.name|slug }}" class="link">{{ auction.item.artifact.name }}</a> [1]</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( auction.item.artifact.image ) }}" />
@@ -86,7 +86,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player %}disabled{% endif %}><i class="fa fa-fw fa-lg fa-money"></i>Pujar</button>
+                                    <button type="submit" class="btn btn-default" {% if auction.player is defined and auction.player == player %}disabled{% endif %}><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Pujar</span></button>
                                 </div>
                                 <input type="number" class="form-control" id="bid" name="bid" min="{{ (auction.bid * 1.1)|round }}" max="{{ player.gold }}" value="{{ (auction.bid * 1.1)|round }}" {% if auction.player is defined and auction.player == player %}disabled{% endif %} required />
                                 <input type="hidden" id="auction" name="auction" value="{{ auction.id }}" {% if auction.player is defined and auction.player == player %}disabled{% endif %} required />
