--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -40,7 +40,7 @@
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if construction.building.name == 'Tierras' or construction.quantity <= 0 %}disabled{% endif %}><i class="fa fa-fw fa-lg fa-bomb"></i>Demoler</button>
+                                    <button type="submit" class="btn btn-default" {% if construction.building.name == 'Tierras' or construction.quantity <= 0 %}disabled{% endif %}><i class="fa fa-fw fa-lg fa-bomb"></i><span class="hidden-xs">Demoler</span></button>
                                 </div>
                                 <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ construction.quantity }}" value="0" {% if construction.building.name == 'Tierras' or construction.quantity <= 0 %}disabled{% endif %} required />
                                 <input type="hidden" id="construction" name="construction" value="{{ construction.id }}" {% if construction.building.name == 'Tierras' or construction.quantity <= 0 %}disabled{% endif %} required />
