--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -36,8 +36,9 @@ img.background {
 }
 .panel-body p {
     padding-top: 8px;
-    padding-left: 15px;
+    padding-left: 0px;
     padding-right: 15px;
+    margin: 0px;
 }
 @media screen and (max-width: 400px) and (orientation: portrait) {
     .text-responsive {
@@ -71,7 +72,10 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
 }
 .label {
     font-size: 95%;
-    padding-bottom: 0.2em;
+    padding: 0.2em;
+}
+.label-extra {
+    background-color: #000000;
 }
 .link {
     text-decoration: underline;
