--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-image"></i>Perfil</h1>
+                <h1><i class="fa fa-fw fa-trophy"></i>Perfil</h1>
             </div>
         </div>
     </div>
