--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -24,7 +24,7 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ troop.unit.defense|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldRecruit|nf }}</div>
-                            <div class="col-xs-8"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}<i class="fa fa-fw fa-hourglass"></i></div>
+                            <div class="col-xs-8"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ troop.unit.family.name }}</a></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.unit.type.name }}</a></div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
