--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -13,7 +13,7 @@
         <div class="col-xs-12"><a name="objetivo"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Objetivo</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <p>blabla</p>
                 </div>
             </div>
@@ -21,7 +21,7 @@
         <div class="col-xs-12"><a name="batalla"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Batalla</div>
-                <div class="panel-body text-center">
+                <div class="panel-body text-center text-responsive">
                     <div class="row">
                         <div class="col-xs-12 col-md-offset-1 col-md-5">
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/factions.png') }}">
@@ -44,7 +44,7 @@
         <div class="col-xs-12"><a name="subasta"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Subasta</div>
-                <div class="panel-body">
+                <div class="panel-body text-responsive">
                     <p>blabla</p>
                 </div>
             </div>
@@ -64,13 +64,13 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset(faction.image) }}">
                         </div>
-                        <div class="col-xs-8 text-padded">
-                            {{ faction.description }}
+                        <div class="col-xs-8">
+                            <p>{{ faction.description }}</p>
                         </div>
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <i class="fa fa-fw fa-quote-right"></i>{{ faction.slogan }}
+                    {{ faction.slogan }}
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    {{ building.description }}
+                    <i class="fa fa-fw fa-joomla"></i>{{ building.description|raw }}
                 </div>
             </div>
         </div>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <i class="fa fa-fw fa-joomla"></i>Habilidad
+                    <i class="fa fa-fw fa-joomla"></i>{% if unit.skill %}{{ unit.skill.description|raw }}{% else %}Ninguna{% endif %}
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <i class="fa fa-fw fa-joomla"></i>Habilidad
+                    <i class="fa fa-fw fa-joomla"></i>{% if hero.skill %}{{ hero.skill.description|raw }}{% else %}Ninguna{% endif %}
                 </div>
             </div>
         </div>
@@ -218,7 +218,7 @@
                             <img class="custom-thumbnail" src="{{ asset( artifact.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <i class="fa fa-fw fa-joomla"></i>{{ artifact.description }}
+                            <i class="fa fa-fw fa-joomla"></i>{{ artifact.description|raw }}
                         </div>
                     </div>
                 </div>
