--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -24,13 +24,13 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ auction.contract.hero.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ auction.contract.hero.manaMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ auction.contract.hero.peopleMaintenance|nf }}</div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.contract.hero.skill.description|raw }}</div>
                         </div>
                     </div>
                 </div>
             {% elseif auction.research is not null %}
             <div class="panel panel-{{ auction.research.spell.faction.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-magic"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.research.spell.name|slug }}" class="link">{{ auction.research.spell.name }}</a></div>
+                <div class="panel-heading text-center">{% if auction.research.spell.enchant %}<i class="fa fa-fw fa-lg fa-link"></i>{% else %}<i class="fa fa-fw fa-lg fa-magic"></i>{% endif %}<a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.research.spell.name|slug }}" class="link">{{ auction.research.spell.name }}</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -40,8 +40,8 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ auction.research.spell.magic|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ auction.research.spell.manaCost|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ auction.research.spell.turnCost|nf }}</div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ auction.research.spell.turnResearch }}</div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.research.spell.skill.description }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ auction.research.spell.turnResearch|nf }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.research.spell.skill.description|raw }}</div>
                         </div>
                     </div>
                 </div>
@@ -56,13 +56,13 @@
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ auction.troop.unit.attack|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ auction.troop.unit.defense|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ auction.troop.unit.speed }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ auction.troop.unit.speed|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ auction.troop.unit.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ auction.troop.unit.manaMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ auction.troop.unit.peopleMaintenance|nf }}</div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ auction.troop.unit.family.name }}</a></div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ auction.troop.unit.type.name }}</a></div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ auction.troop.unit.family.name }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ auction.troop.unit.type.name }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{% if auction.troop.unit.skill is not null %}{{ auction.troop.unit.skill.description|raw }}{% else %}Ninguna{% endif %}</div>
                         </div>
                     </div>
                 </div>
@@ -74,8 +74,8 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( auction.item.artifact.image ) }}" />
                         </div>
-                        <div class="col-xs-8 text-padded">
-                            <i class="fa fa-fw fa-joomla"></i>{{ auction.item.artifact.description }}
+                        <div class="col-xs-8">
+                            <p><i class="fa fa-fw fa-joomla"></i>{{ auction.item.artifact.description|raw }}</p>
                         </div>
                     </div>
                 </div>
