--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -19,8 +19,8 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( enchantment.spell.image ) }}">
                         </div>
-                        <div class="col-xs-8 text-padded">
-                            {{ enchantment.spell.description }}
+                        <div class="col-xs-8">
+                            <p>{{ enchantment.spell.description|raw }}</p>
                         </div>
                     </div>
                 </div>
