--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -11,7 +11,11 @@
             </div>
         </div>
         {% for construction in player.constructions %}
+            {% if construction.building.name == 'Tierras' %}
+        <div class="col-xs-12 col-md-offset-3 col-md-6">
+            {% else %}
         <div class="col-xs-12 col-md-6">
+            {% endif %}
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-home"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> [{{ construction.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
@@ -19,6 +23,11 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( construction.building.image ) }}">
                         </div>
+                        {% if construction.building.name == 'Tierras' %}
+                        <div class="col-xs-8">
+                            <p>Aquí puedes invertir tus <span class="label label-extra">Tierras</span> libres y <span class="label label-extra">Oro</span> en construir edificios para aumentar tu reino.</p>
+                        </div>
+                        {% else %}
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ construction.building.goldCost|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ construction.building.manaCost|nf }}</div>
@@ -33,6 +42,7 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ construction.building.manaCap|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ construction.building.peopleCap|nf }}</div>
                         </div>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="panel-footer text-center">
