--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -16,8 +16,8 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                         </div>
-                        <div class="col-xs-8 text-padded">
-                            Aquí puedes encontrar más tierras libres que añadir a tu reino para construir edificios, hasta un límite de 3500.
+                        <div class="col-xs-8">
+                            <p>Aquí puedes encontrar más <span class="label label-extra">Tierras</span> libres que añadir a tu reino para construir edificios, hasta un límite de 3500.</p>
                         </div>
                     </div>
                 </div>
